--- a/Beers/Assets/beerList.plist
+++ b/Beers/Assets/beerList.plist
@@ -1,5 +1,216 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<array>
+	<dict>
+		<key>name</key>
+		<string>mahou</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou1</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou2</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou3</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou4</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou5</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou6</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou7</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou8</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou9</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou10</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou11</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou12</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou13</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou14</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou15</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou16</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou17</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou18</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou19</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>mahou20</string>
+		<key>grade</key>
+		<real>4.8</real>
+		<key>country</key>
+		<string>spain</string>
+		<key>color</key>
+		<string>blonde</string>
+	</dict>
+</array>
 </plist>
